--- a/menu.html
+++ b/menu.html
@@ -72,7 +72,7 @@
         border: 3px solid black;
         width: 1350px;
         height: 2150px;
-        background-image: url(IMG3.JPG);
+        background-image: url(IMG3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
